Java/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_05\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;F:\Docs\Java1
-d
F:\Docs\Java1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
F:\Docs\Java1\prime.java
<---- end of javadoc command ---->
Loading source file F:\Docs\Java1\prime.java...
F:\Docs\Java1\prime.java:4: error: invalid method declaration; return type required
    public Prime(
           ^
F:\Docs\Java1\prime.java:5: error: illegal start of type
    }
    ^
F:\Docs\Java1\prime.java:5: error: reached end of file while parsing
    }
     ^
3 errors
